# notification-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
nginx/: default.conf
src/: create_app.py  main.py
src/api/: __init__.py  endpoint.py
src/core/: __init__.py  config.py  exceptions.py  retry_policy.py  utils.py
src/dependencies/: __init__.py  notification.py
src/infrastructure/: __init__.py  jinja_template.py
src/infrastructure/broker/: factory.py  redis_b.py
src/infrastructure/smtp/: client.py
src/infrastructure/telegram/: client.py
src/schemas/: notify_schema.py
src/services/: broker_notify_service.py  dlq_service.py  factory.py  protocols.py  smtp_notify_service.py  stmp_notiy_service.py  tg_notify_service.py
src/templates/email/: base_email.html  notification.html
src/workers/: dlq_worker.py  smtp_worker.py  tg_worker.py
tests/: conftest.py
tests/e2e/: conftest.py  test_smtp.py
tests/integration/: conftest.py
tests/integration/api/: test_notifications.py
tests/unit/: conftest.py  test_smtp_client.py  test_smtp_notify_service.py
tests/unit/core/: conftest.py  test_retry_policy.py
tests/unit/infra/: test_smtp_client.py  test_tg_client.py
tests/unit/service/: conftest.py  test_broker_notify_service.py  test_smtp_notify_service.py  test_tg_notify_service.py
tests/unit/worker/: conftest.py  test_smtp_worker.py
